# credit-fraud-detector

./: .gitignore  LICENSE  README.md  pyproject.toml
dev/: credit_fraud_detection.ipynb
